--- a/src/components/Shop/shop.css
+++ b/src/components/Shop/shop.css
@@ -22,7 +22,14 @@ html, body {
 }
 
 .nav ul {
-    margin: 0;
+    font-weight: 600;
+    height: 3em;
+    font-size: 145%;
+    width: 100%;
+    display: flex;
+    margin: 0em;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .nav li {
@@ -32,11 +39,14 @@ html, body {
 .nav a {
     display: inline-block;
     padding: .5em;
-    color: white;
+   color: #2D9CDB;
     text-decoration: none;
+      transition: all 0.2s ease-in-out;
 }
 
 .main-nav {
+   
+
     text-align: center;
     font-size: 1.1em;
     font-weight: lighter;
@@ -44,19 +54,26 @@ html, body {
 }
 
 .main-nav li {
+    
     padding: 0 5%;
+  
 }
 
 .nav a:hover {
+    padding: 1em ;
+  
     background-color: rgba(255, 255, 255, .3)
 }
 
 .main-header {
-    background-color: rgba(0, 0, 0, .6);
-    background-image: url("images/Header\ Background.jpg");
+    background-color: rgba(0, 0, 0, 0.763);
+    background-image: url("images/Album\ 2.png");
     background-blend-mode: multiply;
     background-size: cover;
     padding-bottom: 30px;
+    margin-bottom: 4em;
+       box-shadow: 0px 4px 21px 8px #3498db;
+
 }
 
 .band-name {
@@ -65,7 +82,9 @@ html, body {
     font-size: 4em;
     font-family: "Booter - Zero Zero";
     font-weight: normal;
-    color: white;
+    color: #2D9CDB;
+    text-shadow: 2px 5px 5px rgba(255, 255, 255, 0.421);
+
 }
 
 .band-name-large {
@@ -77,7 +96,7 @@ html, body {
 }
 
 .container {
-    max-width: 900px;
+    max-width: 73%;
     margin: 0 auto;
     padding: 0 1.5em;
 }
@@ -204,6 +223,15 @@ html, body {
 
 .shop-item {
     margin: 30px;
+    background-color: #2d9bdb28;
+    padding: 1em 2em;
+    border-radius: 30px;
+    transition: all 0.2s ease-in-out;
+}
+.shop-item:hover{
+     transform: scale(1.1);
+     background-color: #2d9bdb88;
+    box-shadow: 0px 2px 11px -3px rgb(0 0 0 / 70%)
 }
 
 .shop-item-title {
@@ -214,10 +242,14 @@ html, body {
     font-size: 1.5em;
     color: #333;
     margin-bottom: 15px;
+  
 }
+.btn{margin-top: 1em;
+    border-radius: 12px;}
 
 .shop-item-image {
     height: 250px;
+        border-radius: 30px;
 }
 
 .shop-item-details {
@@ -229,6 +261,7 @@ html, body {
 .shop-item-price {
     flex-grow: 1;
     color: #333;
+    font-size: x-large;
 }
 
 .shop-items {
